neo4j-ee/templates/src/security-groups-existing-vpc.yaml
  Neo4jNLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow client traffic to Neo4j NLB on ports 7473 and 7687
      VpcId: !Ref VpcId
      SecurityGroupEgress: []
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 7473
          ToPort: 7473
          CidrIp: !Ref AllowedCIDR
        - IpProtocol: tcp
          FromPort: 7687
          ToPort: 7687
          CidrIp: !Ref AllowedCIDR

  Neo4jExternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Neo4j traffic from NLB to instances on ports 7473 and 7687
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 7473
          ToPort: 7473
          SourceSecurityGroupId: !GetAtt Neo4jNLBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 7687
          ToPort: 7687
          SourceSecurityGroupId: !GetAtt Neo4jNLBSecurityGroup.GroupId

  Neo4jNLBEgressToHTTPS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt Neo4jNLBSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 7473
      ToPort: 7473
      DestinationSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId

  Neo4jNLBEgressToBolt:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt Neo4jNLBSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 7687
      ToPort: 7687
      DestinationSecurityGroupId: !GetAtt Neo4jExternalSecurityGroup.GroupId

  Neo4jInternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Neo4j Internal Ports
      VpcId: !Ref VpcId

  Neo4jInternalSGIngress5000:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 5000
      ToPort: 5000
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress6000:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 6000
      ToPort: 6000
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress7000:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 7000
      ToPort: 7000
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress7688:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 7688
      ToPort: 7688
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress2003:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 2003
      ToPort: 2003
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress2004:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 2004
      ToPort: 2004
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress3637:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 3637
      ToPort: 3637
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jBastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Operator bastion - no ingress; outbound via VPC endpoints and NLB
      VpcId: !Ref VpcId
      Tags:
        - Key: StackID
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Sub '${AWS::StackName}-bastion-sg'
        - Key: "aws-apn-id"
          Value: "pc:4t4a9h39qkq4tbo3n9zd51p25"

  VpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: CreateVpcEndpoints
    Properties:
      GroupDescription: Allow HTTPS from Neo4j instances and operator bastion to VPC interface endpoints
      VpcId: !Ref VpcId
      SecurityGroupEgress: []
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref Neo4jBastionSecurityGroup

  ExistingEndpointSgBastionIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseExistingVpcEndpoints
    Properties:
      GroupId: !Ref ExistingEndpointSgId
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !GetAtt Neo4jBastionSecurityGroup.GroupId

  ExistingEndpointSgNeo4jIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseExistingVpcEndpoints
    Properties:
      GroupId: !Ref ExistingEndpointSgId
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
