neo4j-ee/templates/src/security-groups-public.yaml
  Neo4jNLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow external traffic to Neo4j NLB on ports 7473 and 7687
      VpcId: !Ref Neo4jVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 7473
          ToPort: 7473
          CidrIp: !Ref AllowedCIDR
        - IpProtocol: tcp
          FromPort: 7687
          ToPort: 7687
          CidrIp: !Ref AllowedCIDR

  Neo4jExternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Neo4j traffic from NLB to instances on ports 7473 and 7687
      VpcId: !Ref Neo4jVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 7473
          ToPort: 7473
          SourceSecurityGroupId: !GetAtt Neo4jNLBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 7687
          ToPort: 7687
          SourceSecurityGroupId: !GetAtt Neo4jNLBSecurityGroup.GroupId

  Neo4jInternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Neo4j Internal Ports
      VpcId: !Ref Neo4jVPC

  Neo4jInternalSGIngress5000:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 5000
      ToPort: 5000
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress6000:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 6000
      ToPort: 6000
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress7000:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 7000
      ToPort: 7000
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress7688:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 7688
      ToPort: 7688
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress2003:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 2003
      ToPort: 2003
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress2004:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 2004
      ToPort: 2004
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId

  Neo4jInternalSGIngress3637:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 3637
      ToPort: 3637
      SourceSecurityGroupId: !GetAtt Neo4jInternalSecurityGroup.GroupId
